--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
   <!-- Vendor CSS Files -->
   <link rel="stylesheet" href="bootstrap-icons/bootstrap-icons.css">
+    <link rel="stylesheet" href="bootstrap-icons/bootstrap-icons.min.css">
 
     <!-- bootstrap -->
     <link rel="stylesheet" href="bootstrap-5.3.6-dist/css/bootstrap.min.css">
@@ -495,5 +496,6 @@
 
 
                 <!-- <svg viewBox="0 0 1348 200" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path fill="rgba(129, 100, 60, 1)" d="M 0 200 C 274 200 411 110 685 110 L 685 110 L 685 0 L 0 0 Z" stroke-width="0"></path> <path fill="rgba(129, 100, 60, 1)" d="M 684 110 C 949.6 110 1082.4 200 1348 200 L 1348 200 L 1348 0 L 684 0 Z" stroke-width="0"></path> </svg> -->
+
 
 
