--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <li><a href="#gallery">Gallery</a></li>
                     <li class="dropdown"><a href="#"><span>Others</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                         <ul>
-                            <li><a href="#">Dropdown 1</a></li>
+                            <li><a href="#">Dropdown </a></li>
                             <li><a href="#">Dropdown 2</a></li>
                             <li><a href="#">Dropdown 2</a></li>
                             <li><a href="#">Dropdown 3</a></li>
@@ -496,6 +496,7 @@
 
 
                 <!-- <svg viewBox="0 0 1348 200" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path fill="rgba(129, 100, 60, 1)" d="M 0 200 C 274 200 411 110 685 110 L 685 110 L 685 0 L 0 0 Z" stroke-width="0"></path> <path fill="rgba(129, 100, 60, 1)" d="M 684 110 C 949.6 110 1082.4 200 1348 200 L 1348 200 L 1348 0 L 684 0 Z" stroke-width="0"></path> </svg> -->
+
 
 
 
